--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Симулятор машини Тюрінга</title>
+  <title>Симулятор машини Тюринга</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -72,7 +72,7 @@
 </head>
 <body>
 
-<h1>🌐 Симулятор машини Тюрінга</h1>
+<h1>🌐 Симулятор машини Тюринга</h1>
 
 <h3>Умова задачі:</h3>
 <textarea id="task"></textarea>
@@ -238,4 +238,5 @@ renderTape();
 </script>
 
 </body>
+
 </html>
